...
import ch.hikemate.app.ui.navigation.NavigationActions
import ch.hikemate.app.ui.navigation.Route
import ch.hikemate.app.ui.navigation.Screen

object CreateAccountScreen {
  const val TEST_TAG_TITLE = "create_account_title"
  const val TEST_TAG_NAME_INPUT = "create_account_name_input"
  const val TEST_TAG_EMAIL_INPUT = "create_account_email_input"
  const val TEST_TAG_PASSWORD_INPUT = "create_account_password_input"
  const val TEST_TAG_CONFIRM_PASSWORD_INPUT = "create_account_confirm_password_input"
  const val TEST_TAG_SIGN_UP_BUTTON = "create_account_sign_up_button"
}

/**
 * A composable that displays the create account.
 *
 * @param navigationActions The navigation actions.
...
